@@ -289,6 +289,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17467: add readline and readlines support to mock_open in
+  unittest.mock.
+
 - Issue #17192: Update the ctypes module's libffi to v3.0.13.  This
   specifically addresses a stack misalignment issue on x86 and issues on
   some more recent platforms.
